# fermi

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  build.sh  flake.nix
docs/: language.md
handle/Error/IOError/: IOError.c  IOError.h
rt/: fermi_rt.S  fermi_rt.c  fermi_rt.h
src/: main.c
src/fearena/: arena.c  arena.h
src/fecodegen/: codegen.c  codegen.h  fir.c  fir.h
src/fehir/: hir.c  hir.h
src/felexer/: lexer.c  lexer.h  token.c  token.h
src/fellvm/: llvm_emit.c  llvm_emit.h
src/feopt/: opt.c  opt.h
src/feparser/: ast.h  parser.c  parser.h
src/fermi/: fermi.h
src/fesema/: sema.c  sema.h
src/fetc/: tc.c  tc.h
stdlib/math/: math.fe
stdlib/str/: str.fe
tests/: bench_suite.fe  fermi_file.fe  run_tests.sh  t10_cast.fe  t10_match.fe  t11_result.fe  t12_region.fe  t13_param_opt.fe  t14_try.fe  t15_escape.fe  t16_defer.fe  t17_lambda.fe  t18_region2.fe  t19_array.fe  t1_hello.fe  t1_lex.fe  t20_map.fe  t21_interp.fe  t21_intrinsics.fe  t22_comptime.fe  t22_mut_str.fe  t2_parse.fe  t2_types.fe  t3_control.fe  t3_sema.fe  t4_loops.fe  t4_types.fe  t5_control.fe  t5_structs.fe  t6_match.fe  t6_recursion.fe  t7_enums.fe  t7_print_types.fe  t8_math.fe  t8_structs.fe  t9_enums.fe  t9_methods.fe  tes.fe
